# AnomalyDetection

./: .gitignore  Makefile  README.md  pyproject.toml
multiagent_pipeline/: multiagent.py
src/: config.py
src/binary_classification/supervised_models/supervised_model_1/: model.py
src/binary_classification/supervised_models/supervised_model_1/notebooks/: evaluation.ipynb
src/binary_classification/time_series/time_series_models_comparison/: tep_pipeline.py
src/binary_classification/time_series/time_series_rf/: evaluate.py
src/binary_classification/time_series/time_series_rft_finetune/: data_loader.py  evaluation.py  main.py  tune_random_forest.py
src/binary_classification/time_series/time_series_rft_finetune/tep_results_rf/: scaler.joblib  search_results.csv
src/binary_classification/unsupervised_model_1/: evaluate.py  knn_experiment.py  process.py  train.py
src/binary_classification/unsupervised_model_1/notebooks/: data_exploration.ipynb  knn_experiment.ipynb  precision_recall.ipynb
src/binary_classification/unsupervised_model_1/results/: metrics_summary.csv
src/multiagent_pipeline/: multiagent.py
supervised_model_1/: data_loading.py  model.py
supervised_model_1/results/: Classification_Report_01.txt
time_series_2/: tep_pipeline.py
time_series_2/tep_results/: metrics.csv
time_series_rf/: evaluate.py  model.py
unsupervised_model_1/: evaluate.py  knn_experiment.py
